# AlphaStats

./: bp.sh  chk.py  pyproject.toml
.github/workflows/: ci.yml
alphastats/: Distribution.py  descriptive.py  distribution.py  utils.py
test/: description_test.py
