[project]
name = "alphastats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mypy>=2.1.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.0.260204",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]
